[package]
name = "mangpt"
version = "0.1.0"
description = "CLI program to ask ChatGPT how to use other CLI programs"
authors = ["Oliver Koch <oltoko@gmail.com>"]
repository = "https://github.com/oltoko/mangpt"
license = "MIT"
keywords = ["cli", "chatgpt"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
clap = { version = "4.4.12", features = ["derive"] }
dirs = "5.0.1"
futures = "0.3.30"
rpassword = "7.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
tokio = { version = "1.35.1", features = ["full"] }
