[package]
name = "mangpt"
version = "0.3.0"
description = "CLI program to ask ChatGPT how to use other CLI programs"
authors = ["Oliver Koch <oltoko@gmail.com>"]
repository = "https://github.com/oltoko/mangpt"
license = "MIT"
keywords = ["cli", "chatgpt"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.41", features = ["full"] }
