[package]
name = "mangpt"
version = "0.4.1"
description = "CLI program to ask ChatGPT how to use other CLI programs"
authors = ["Oliver Koch <oltoko@gmail.com>"]
repository = "https://github.com/oltoko/mangpt"
license = "MIT"
keywords = ["cli", "chatgpt"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.28"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.44", features = ["full"] }
